# DarkDaysArch

./: .eslintignore  .eslintrc.js  .gitignore  README.md  craco.config.js  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json
docs/diagrams/: DDA-product-prototype.drawio  README.md
public/: index.html
public/assets/: README.md
public/json/: house_general_palette.json  magic_academy.json  specials.json  test.json
public/locales/en/: translation.json
public/locales/zh_CN/: translation.json  ui.json
scripts/: generate-cdda-typings-from-json-schema.ts
src/: App.tsx  globalStyles.ts  index.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/data/: Cargo.toml
src-tauri/data/src/: common.rs  events.rs  lib.rs  list.rs  types.rs
src-tauri/data/src/common/: bool.rs  float64.rs  int64.rs  string.rs  tuple.rs
src-tauri/data/src/events/: mod_loading.rs
src-tauri/data/src/types/: city_building.rs  external_option.rs  furniture.rs  mapgen.rs  mod_info.rs  overmap_connection.rs  overmap_location.rs  overmap_special.rs  overmap_terrain.rs  palette.rs  region_settings.rs  terrain.rs  tileset.rs
src-tauri/examples/: generate-js.rs  generate-jsonschema.rs  generate-ts.rs  try.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  parsers.rs  utils.rs
src-tauri/src/commands/: load_cdda_data_folder.rs
src-tauri/src/parsers/: palette.rs  tileset.rs
src-tauri/src/types/: furniture.rs  mapgen.rs  palette.rs  state.rs  tileset.rs
src-tauri/src/utils/: random_id.rs
src/components/Canvas/: hooks.ts  index.tsx
src/components/ContextMenu/: index.tsx
src/components/Details/: index.ts
src/components/HoverMenu/: index.tsx
src/components/RandomSpinner/: index.tsx
src/components/SideControls/: README.md  index.tsx  interface.ts
src/components/Sidebar/: README.md  SidebarIconButton.tsx  index.tsx  interface.ts
src/pages/SidePanel/: index.tsx  panelConfig.tsx
src/setup/: defaultTheme.ts  i18n.ts  styled.d.ts
src/store/: store.ts
src/store/global/: textureManager.ts
src/store/models/: cameraMouse.ts  files.ts  furniture-medical.json  index.ts  knowledgeGraph.ts  maps.ts  uiState.ts
src/types/: direction.ts  libs.d.ts  mapgen.ts  tileset.ts
src/types/cdda/: furniture.json  furniture.ts  mapgen.json  mapgen.ts  modInfo.json  modInfo.ts  palette.json  palette.ts  selectList.json  selectList.ts  tauri_event.json  tauri_event.ts  terrain.json  terrain.ts  tileset.json  tileset.ts
(+9 files in other folders)
