[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[dependencies]
glob = "0.3"
image-base64 = "0.1"
project-root = "0.2.2"
rand = "0.8"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.0.0-beta.7", features = ["api-all"] }
typescript-type-def = "0.2.1"
schemars = "0.8.3"
data = {path = "./data"}

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
